Fixed css bug where the handles were not aligned

--- a/src/Questionnode.module.css
+++ b/src/Questionnode.module.css
@@ -30,6 +30,7 @@
 }
 
 .answerWrapper {
+  position: relative;
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -41,6 +42,8 @@
   color: #ffffff;
   border-top: solid 1px #ffffff;
   width: 100%;
+  word-wrap: break-word;
+  box-sizing: border-box;
 }
 
 .answerList {
