--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 :root {
-  --pink: #EB4B64;
+  --pink: #E21E51;
   --bg: #1A192B;
 }
 
